--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,6 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
-        ftp-server: ftp://ftp.example.com:21/public_html
-        ftp-username: userna5
+        ftp-server: ftp://colorant.o2switch.net:21/public_html/cv
+        ftp-username: ujvo5080
         ftp-password: ${{ secrets.FTP_PASSWORD }}
